--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,19 @@ flutter:
 
   assets:
     - assets/images/
+    
+  fonts:
+    - family: inter
+      fonts:
+        - asset: fonts/inter/Inter-Black.ttf
+        - asset: fonts/inter/Inter-Bold.ttf
+        - asset: fonts/inter/Inter-ExtraBold.ttf
+        - asset: fonts/inter/Inter-ExtraLight.ttf
+        - asset: fonts/inter/Inter-Light.ttf
+        - asset: fonts/inter/Inter-Medium.ttf
+        - asset: fonts/inter/Inter-Regular.ttf
+        - asset: fonts/inter/Inter-SemiBold.ttf
+        - asset: fonts/inter/Inter-Thin.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
