--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   mobile_device_identifier: ^0.0.2
   device_info_plus: ^10.1.0
   url_launcher:
+  lottie: ^1.2.1
   smooth_page_indicator: ^1.1.0
   photo_view: ^0.15.0
   gap: ^3.0.1
@@ -56,9 +57,10 @@ dependencies:
   ntp: ^2.0.0
   datetime_setting: ^2.0.2
   permission_handler: ^11.3.1
-
-
-
+  flutter_staggered_animations: ^1.1.1
+  flutter_bounce: ^1.1.0
+  scroll_to_index:
+  dotted_line: ^3.1.0
 
 
 dev_dependencies:
