--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,10 @@ dependencies:
   flutter_bounce: ^1.1.0
   scroll_to_index:
   dotted_line: ^3.1.0
-
+  firebase_auth: ^4.2.1
+  firebase_messaging: ^14.0.3
+  flutter_local_notifications: ^9.5.3+1
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
