--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   firebase_messaging: ^14.0.3
   flutter_local_notifications: ^9.5.3+1
   firebase_core:
+  provider: ^6.0.5
+
 
 dev_dependencies:
   flutter_test:
