--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"  />
 
     <application
-        android:label="chicken_delight"
+        android:label="Chicken Delight"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
