--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"  />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"  />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:label="Chicken Delight"
