--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_local_notifications: ^9.5.3+1
   firebase_core:
   provider: ^6.0.5
+  flutter_shakemywidget: ^1.0.5+1
 
 
 dev_dependencies:
