--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   firebase_core:
   provider: ^6.0.5
   flutter_shakemywidget: ^1.0.5+1
+  animations: ^2.0.11
 
 
 dev_dependencies:
